feat: set maximum file size to 30MB

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+spring.servlet:
+  multipart:
+    max-file-size: 30MB
+    max-request-size: 30MB
+
 image.storage:
   root-directory: static/images
 security:
