--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    implementation group: 'org.sejda.imageio', name: 'webp-imageio', version: '0.1.6'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
